마지막 시즌 패치 진행 중

--- a/website/html/allergy.html
+++ b/website/html/allergy.html
@@ -39,8 +39,8 @@
         <pre><button type="submit" onclick="save()">저장</button></pre>
     </form>
     
-    <h2 style="margin: 50px 0px -10px 0px">목록 및 삭제</h2>
-    <ul id="dataList"></ul>
+    <h2 class="list2">목록 및 삭제</h2>
+    <ul class="lists2" id="dataList"></ul>
 
     <script src="../js/allergy.js"></script>
     <script>
