--- a/website/html/dashboard.html
+++ b/website/html/dashboard.html
@@ -6,18 +6,29 @@
 </head>
 
 <body id="frame">
-    <h2 style="margin: -10px 0px -10px 0px">스캔 기록</h2>
+    <div class="popupContainer" id="specific" style="border-radius: 10px; margin: -24px;">
+        <div class="popup">
+            <div id="dataDetail"></div>
+        </div>
+    </div>
 
-    <h2>알레르기 등록된 사용자</h2>
-    <ul id="dashboard_allergy"></ul>
-    
-    <button id="gpio">gpio 테스트</button>
-    
+    <h2 style="margin: -5px 0px -10px 0px">스캔 기록</h2><br>
+    지금까지 스캔한 항목을 [스캔 순서 / 식품명 / 유통기한]으로 표시합니다.<br>
+    원하는 항목의 숫자를 누를 시, 알러지 유발 식품이나 스캔한 날짜를 포함한 상세 결과를 확인하실 수 있습니다.
+    <button onclick="gpio_main">gpio 테스트</button><br><br>
+    <table style="table-layout: fixed; width: 100%">
+        <td onclick="prevPage()" style="text-align: left">< 이전 페이지로</td>
+        <td id="num" style="text-align: center"></td>
+        <td onclick="nextPage()" style="text-align: right">다음 페이지로 ></td> 
+    </table>
+    <hr>
+    <ul id="scanList"></ul>
+
     <script src="../js/gpio.js"></script>
     <script src="../js/allergy.js"></script>
+    <script src="../js/script.js"></script>
     <script>
-        window.onload = fetchData_dashboard();
-        document.getElementById("gpio").addEventListener("click", gpio_main);
+        window.onload = dataLoad();
     </script>
 </body>
 </html>
