--- a/website/html/allergy.html
+++ b/website/html/allergy.html
@@ -16,7 +16,7 @@
         <label for="allergy">알레르기: </label>
         <select style="font-size: 20px; margin-top: 5px" id="allergy" name="allergy">
         <option value="없음">없음</option>
-        <option value="난류">난류</option>
+        <option value="계란">계란</option>
         <option value="우유">우유</option>
         <option value="메밀">메밀</option>
         <option value="땅콩">땅콩</option>
