--- a/website/index.html
+++ b/website/index.html
@@ -28,7 +28,7 @@
         <img id="volumeImage" src="img/mute.png" onclick="volumeControl()"> <!--onclick="volumeControl()"-->
         <img id="cameraImage" src="img/camera.png" onclick="confirmScan()"> <!--onclick="showConfirm()"-->
     </section>
-    
+      <!--confirmScan()-->
     <!--iframe 부분-->
     <iframe id="iframe"></iframe>
 
@@ -55,8 +55,8 @@
         volumeControl(); //볼륨 100시작
         };
     </script>
+    <script src="js/gpio.js"></script>
     <script src="js/script.js"></script>
     <script src="js/voice.js"></script>
-    <script src="js/gpio.js"></script>
 </body>
 </html>
