--- a/website/index.html
+++ b/website/index.html
@@ -26,7 +26,7 @@
         <li class="menuLink" id="menu4" onclick="iframeSelect(4)">사용법</li>
         </nav>
         <img id="volumeImage" src="img/mute.png" onclick="volumeControl()"> <!--onclick="volumeControl()"-->
-        <img id="cameraImage" src="img/camera.png" onclick="confirmScan()"> <!--onclick="showConfirm()"-->
+        <img id="cameraImage" src="img/camera.png" onclick="showConfirm()"> <!--onclick="showConfirm()"-->
     </section>
       <!--confirmScan()-->
     <!--iframe 부분-->
